Fixing Resolution iOS Devices

--- a/style.css
+++ b/style.css
@@ -9,9 +9,27 @@ html body {
   background-attachment: fixed;
   object-fit: inherit;
   width: 100%;
+  height: 100%;
+  max-width: auto;
+  max-height: auto;
   min-height: 480px;
   position: relative;
 }
+/* Mobile devices */
+@media screen and (max-width: 768px) {
+.wrapper {
+      background-attachment: scroll;
+      background-position: center center;
+    }
+}
+/* Tablet devices */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+.wrapper {
+      background-attachment: scroll;
+      background-position: center center;
+    }
+}
+
 h1{
   -webkit-text-stroke: 1px rgb(255, 255, 255);
     text-shadow:
@@ -1043,16 +1061,16 @@ li {
     transform: translateX(32vw) translateY(27vh) scale(0.67);
   }
 }
-.firefly:nth-child(12) {
-  animation-name: move12;
-}
-.firefly:nth-child(12)::before {
-  animation-duration: 17s;
-}
-.firefly:nth-child(12)::after {
-  animation-duration: 17s, 10323ms;
-  animation-delay: 0ms, 3446ms;
-}
+    .firefly:nth-child(12) {
+      animation-name: move12;
+    }
+    .firefly:nth-child(12)::before {
+      animation-duration: 17s;
+    }
+    .firefly:nth-child(12)::after {
+      animation-duration: 17s, 10323ms;
+      animation-delay: 0ms, 3446ms;
+  }
 
 @keyframes move12 {
   0% {
